--- a/platforms/ios/GruApp/GruApp-Info.plist
+++ b/platforms/ios/GruApp/GruApp-Info.plist
@@ -4,6 +4,8 @@
   <dict>
     <key>NSCameraUsageDescription</key>
     <string>Allow access to camera to upload picture</string>
+    <key>NSHumanReadableCopyright</key>
+    <string/>
     <key>NSLocationWhenInUseUsageDescription</key>
     <string>location</string>
     <key>NSLocationUsageDescription</key>
